src/objects/Petition_Ledger__c.object
<CustomObject>
    <description>This object covers the transfer of petitions from one person to another.  We&apos;re using Contacts so we have the option of looking at transfers to Member Leaders.</description>
    <fields>
        <fullName>Bad_Signatures__c</fullName>
        <label>Bad Signatures</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circulator_Alt_Relation__c</fullName>
        <description>relation of circulator alt to check in (Transferred From) named contact</description>
        <label>Circulator Alt Relation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circulator_Alt__c</fullName>
        <description>Named of circulator signed if different from named circulator leader (for sfdc non-contact circulators)</description>
        <label>Circulator Alt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No County Assigned</fullName>
                    <default>true</default>
                    <label>No County Assigned</label>
                </value>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Petition_Ledger1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Division__c</fullName>
        <formula>if (left(text(Transfer_Type__c), 1) = &quot;A&quot;, &quot;CHECK-IN&quot;,
  if (text(Transferred_From__r.Account.Account_Group__c)=&apos;Staff&apos;,
    if(left(Transferred_From__r.Department,  3) = &apos;OPS&apos;,
       UPPER(&apos;Operations&apos;),
       UPPER(Transferred_From__r.Department)
    ),
    UPPER(text(Transferred_From__r.Account.Account_Group__c)))
)</formula>
        <label>From Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to regional director for petition circulator</description>
        <label>From Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Petition_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Petition Quantity</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Petition_Ledger2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Division__c</fullName>
        <formula>if (left(text(Transfer_Type__c), 1) = &quot;O&quot;, &quot;CHECK-IN&quot;,
  if (left(text(Transfer_Type__c), 1) = &quot;A&quot;, &quot;AUDIT&quot;,
    if (left(text(Transfer_Type__c), 1) = &quot;X&quot;, &quot;BURNED&quot;,
      if (text(Transferred_To__r.Account.Account_Group__c)=&apos;Staff&apos;,
          if(left(Transferred_To__r.Department,  3) = &apos;OPS&apos;,
             UPPER(&apos;Operations&apos;),
             UPPER(Transferred_To__r.Department)
          ),
          UPPER(text(Transferred_To__r.Account.Account_Group__c)))
      )
   )
)</formula>
        <label>To Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Petition_Ledger3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Type__c</fullName>
        <label>Transfer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P. Printed Petitions Delivered To</fullName>
                </value>
                <value>
                    <fullName>S. Staff Check-Out</fullName>
                </value>
                <value>
                    <fullName>M. Member Leader Check-Out</fullName>
                </value>
                <value>
                    <fullName>O. Check-In to Operations</fullName>
                </value>
                <value>
                    <fullName>X. Burned</fullName>
                </value>
                <value>
                    <fullName>A. Sent to Audit</fullName>
                </value>
                <value>
                    <fullName>R. Returned Blank to Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transferred_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transferred From</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Petition Ledger</relationshipLabel>
        <relationshipName>Petition_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transferred_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Transferred To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Petition Ledger (Transferred To)</relationshipLabel>
        <relationshipName>Petition_Ledger1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Turf_Key__c</fullName>
        <formula>if( Transferred_From__r.Account.Name = &quot;SEIU-UHW&quot;,
    Transferred_From__r.Department,
    Transferred_From__r.Account.Turf_Key__c)
    &amp; &quot; / &quot; &amp;     Transferred_From__r.FirstName &amp; &quot; &quot; &amp; Transferred_From__r.LastName

&amp; &quot; | &quot; &amp;

if( Transferred_To__r.Account.Name = &quot;SEIU-UHW&quot;,
    Transferred_To__r.Department,
    Transferred_To__r.Account.Turf_Key__c)
    &amp; &quot; / &quot; &amp;     Transferred_To__r.FirstName &amp; &quot; &quot; &amp; Transferred_To__r.LastName</formula>
        <label>Turf Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UHW_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>UHW Campaign</label>
        <referenceTo>UHW_Campaign__c</referenceTo>
        <relationshipLabel>Petition Ledger</relationshipLabel>
        <relationshipName>Petition_Ledger</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_Signatures__c</fullName>
        <label>Valid Signatures</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Petition Ledger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UHW_Campaign__c</columns>
        <columns>From_Division__c</columns>
        <columns>Transferred_From__c</columns>
        <columns>To_Division__c</columns>
        <columns>Transferred_To__c</columns>
        <columns>Transfer_Type__c</columns>
        <columns>Quantity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>County__c</columns>
        <columns>Valid_Signatures__c</columns>
        <columns>Bad_Signatures__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Check_Ins</fullName>
        <columns>NAME</columns>
        <columns>Bad_Signatures__c</columns>
        <columns>Valid_Signatures__c</columns>
        <columns>From_Division__c</columns>
        <columns>From_Regional_Director__c</columns>
        <columns>From_Coordinator__c</columns>
        <columns>Transferred_From__c</columns>
        <columns>Transfer_Date__c</columns>
        <columns>Turf_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transfer_Type__c</field>
            <operation>contains</operation>
            <value>O. Check-In to Operations</value>
        </filters>
        <label>Check Ins</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PET-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Petition Ledger</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>County_Assignment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR(left(text(Transfer_Type__c), 1) = &quot;A&quot;, 
     left(text(Transfer_Type__c), 1) = &quot;O&quot; 
  ),
  text(County__c) = &quot;No County Assigned&quot;
)</errorConditionFormula>
        <errorMessage>Check-ins and audit records must have a valid county assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Have_From</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
  left(text(Transfer_Type__c), 1) != &quot;P&quot;, 
  isblank( Transferred_From__c )
)</errorConditionFormula>
        <errorMessage>After printing, all Petition Ledger records must have a To and a From person.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_To_For_Burn_and_Audit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR(left(text(Transfer_Type__c), 1) = &quot;A&quot;,
     left(text(Transfer_Type__c), 1) = &quot;X&quot;
  ),
  NOT(ISBLANK( Transferred_To__c))
)</errorConditionFormula>
        <errorMessage>Do not put anyone in Transfer To for audits and burns.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Not_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt; 1</errorConditionFormula>
        <errorMessage>Quantity must be 1 petition or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Signatures_for_CheckIn_and_Audit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(left(text(Transfer_Type__c), 1) != &quot;A&quot;,
      left(text(Transfer_Type__c), 1) != &quot;O&quot;,
       OR(Valid_Signatures__c &gt; 0,
          Bad_Signatures__c &gt; 0)
  )</errorConditionFormula>
        <errorMessage>Valid and bad signature counts should only be on check-ins and audit records.</errorMessage>
    </validationRules>
</CustomObject>